spade-tests/src/snapshots/spade_tests__ast_lowering__generic_type_in_const_generic_where_clause_lhs.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test<O>()
    where O: 1
{}


error: Currently, only generic numbers can occur in where clauses
  ┌─ testinput:2:11
  │
1 │ fn test<O>()
  │         - O is a generic type declared here
2 │     where O: 1
  │           ^ Generic type in where clause
  │
  = Try making the generic a number
  │
1 │ fn test<#O>()
  │         +
